# zenn-docs

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
articles/: 0f7b2bb4dd8696.md  0faceb3e34e9ab.md  2536165a410e79.md  27dbe201808952.md  307a04e64e06a2.md  3a6c3b210ffdeb.md  67e096d62c9265.md  8018d3c45c4290.md  93caaeefe94919.md  9628b8eef173d4.md  9f9aae80ae30c3.md  c8076edeeae3b0.md  ccde9418c85859.md  d0120266f25ceb.md  d3f865ccb42028.md  e17b4d223cd7da.md  f7f9199f9f5fef.md  fizz-buzz-exp.md  mantis-2026-summary.md
jupyter-notebooks/: SimCLR.ipynb
paper/: BYOL.md  MAE.md  Rethinking-DL-generalization.md  Sharp-MInima.md  Shrap-Minima_Anti.md  SimCLR.md  VICReg.md  mixup.md
src/decomposition/: pca.py
src/ssl/simclr/: Untitled-1.ipynb  data_augmentation.py  experiment.ipynb  lars_optimizer.py  ntxent_loss.py  projection_head.py  resnet_encoder.py  simclr_trainer.py  utils.py
test/decomposition/: test_pca.py
